--- a/Davie's Burger Box Model/index.html
+++ b/Davie's Burger Box Model/index.html
@@ -2,18 +2,12 @@
 <html>
   <head>
     <title>Davie JR's Menu</title>
-    <!-- <link
-      href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700"
-      rel="stylesheet"
-    /> -->
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
     <!-- Navigation Section -->
-    <img
-      src="burger-logo.svg"
-    />
+    <img src="burger-logo.svg" />
 
     <nav>
       <span><a href="#">MENU</a></span>
