--- a/run and score/index.html
+++ b/run and score/index.html
@@ -16,15 +16,19 @@
         <ul>
           <li><a href="#" class="home">Home</a></li>
           <li><a href="#">FAQs</a></li>
-          <li><a href="#">Game Rules</a></li>
+          <li><a href="#">G ame Rules</a></li>
           <li><a href="#">Subscribe</a></li>
         </ul> 
       </nav>
     </header>
     <main>
       <div class="button">
-        <button>Start Game</button>
+        <button id="start_game">Start Game</button>
       </div> 
+      <div class="container">
+        <p>Game Over</p>
+        <button>Play Again!</button>
+      </div>
     <!-- game container -->
     <div id="game">
       <div id="player"></div>
@@ -55,6 +59,89 @@
         </div>
       </ul>
     </footer> 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="jQuery.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('#start_game').click(function(){
+          //
+          // Creating the game logic
+const player = document.getElementById("player");
+const obstacle = document.getElementById("obstacle");
+let obstacle_position = 800;
+let playerPosition = 20;
+let is_jumping = false;
+
+// let move the obstacle from right to left
+
+function move_obstacle() {
+  obstacle_position -= 10;
+  obstacle.style.left = `${obstacle_position}px`;
+
+  if (obstacle_position < -30) {
+    //reset the obstacle position, when it goes off the screen
+    obstacle_position = 800;
+  }
+}
+
+// check collision
+
+function check_collision() {
+  const player_rect = player.getBoundingClientRect();
+  const obstacle_rect = obstacle.getBoundingClientRect();
+
+  if (
+    player_rect.top < obstacle_rect.bottom &&
+    player_rect.bottom > obstacle_rect.top &&
+    player_rect.left < obstacle_rect.right &&
+    player_rect.right > obstacle_rect.left
+  ) {
+    // player hits the obstacle
+    // alert("Game Over!");
+    
+    // instead of doing an alert let do something like;
+    let container = getElementsByClassName('container');
+    container.style.background("black");
+    obstacle_position = 800;
+  }
+}
+
+// now listen the events
+document.addEventListener("keydown", (e) => {
+  if (e.key === " " && !is_jumping) {
+    // checking that the player is not already jumping
+    is_jumping = true;
+    // disabling the smooth transition
+    // player.style.transition = "opacity 0.6s ease-in-out 0.5s";
+    let jump_height = 150;
+    // let the player make jump
+    player.style.bottom = `${jump_height}px`;
+
+    // the player gets back to the ground
+    setTimeout(() => {
+      // playerPosition = 20;
+      player.style.bottom = `${playerPosition}px`;
+      is_jumping = false;
+    }, 700);
+  }
+});
+
+// setInterval(check_collision, 10);
+
+function gameLoop() {
+  move_obstacle(); // Move the obstacle
+  check_collision(); // Check for collisions
+  // Update any other game logic
+
+  // Request the next frame
+  // donot include the parenthesis in the call back fun
+  requestAnimationFrame(gameLoop); 
+}
+
+          //
+          requestAnimationFrame(gameLoop);
+        })
+      })
+    </script>
   </body>
 </html>
